--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="carousel-item">
                 <img src="https://cdn.pixabay.com/photo/2018/12/20/10/22/forest-3885627_1280.jpg">
             </div>
-            <img src="iphonex.png" class="mobile">
+            <img src="https://github.com/jcrommar/3d_iphone_carousel/blob/master/iphoneX.png?raw=true" class="mobile">
         </div>
         <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
         <!-- Compiled, minified JS -->
